Edited demo notebook

--- a/examples/Testing.ipynb
+++ b/examples/Testing.ipynb
@@ -12,7 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "id": "c9cf98ba-1f5f-4893-ab4d-7a76b6b17bf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from any_guardrail.api import GuardrailFactory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a599a0b4-8183-4e57-a684-1a321c98888d",
+   "metadata": {},
+   "source": [
+    "## `CallGuardrail` Object\n",
+    "\n",
+    "The `CallGuardrail` object is designed to help users call upon guardrails without having to know the exact class of each guardrail. Similar to how you can call a model easily using `pipeline` or `AutoModel...` in HuggingFace, this interface allows you to get the model and associated classification logic seamlessly with just a `str` argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0f2dd776-bcc1-43c5-8fdc-b515cd70587e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calling = GuardrailFactory()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d0d10a49-a558-4a5b-8f32-5a914b078558",
    "metadata": {},
    "outputs": [
@@ -42,15 +72,13 @@
        " 'google/shieldgemma-27b']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from any_guardrail import list_all_supported_guardrails\n",
-    "\n",
-    "list_all_supported_guardrails()"
+    "calling.list_all_supported_guardrails()"
    ]
   },
   {
@@ -65,43 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2a7238fe-dfc9-4ee9-adc7-9cef0f5ccdc1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "CallGuardrail.call_guardrail() missing 1 required positional argument: 'guardrail_identifier'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mcalling\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcall_guardrail\u001b[49m\u001b[43m(\u001b[49m\u001b[43mguardrail_path\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mprotectai/deberta-v3-small-prompt-injection-v2\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: CallGuardrail.call_guardrail() missing 1 required positional argument: 'guardrail_identifier'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ClassificationOutput(unsafe=False, explanation=None, score=None)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from any_guardrail import create_guardrail\n",
-    "\n",
-    "model = create_guardrail(guardrail_identifier=\"protectai/deberta-v3-small-prompt-injection-v2\")\n",
-    "\n",
-    "model.safety_review(\"What's up bro?\")"
+    "model = calling.create_guardrail(guardrail_identifier='protectai/deberta-v3-small-prompt-injection-v2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "8c2daa8d-6f67-4f20-b94d-f9a43e6e3223",
    "metadata": {},
    "outputs": [
@@ -111,7 +121,7 @@
        "ClassificationOutput(unsafe=False, explanation=None, score=None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
