chore: run linting

--- a/examples/Testing.ipynb
+++ b/examples/Testing.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "model = factory.create_guardrail(guardrail_identifier='protectai/deberta-v3-small-prompt-injection-v2')"
+    "model = factory.create_guardrail(guardrail_identifier=\"protectai/deberta-v3-small-prompt-injection-v2\")"
    ]
   },
   {
