feat: factory no longer instantiated

--- a/examples/Testing.ipynb
+++ b/examples/Testing.ipynb
@@ -32,17 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0f2dd776-bcc1-43c5-8fdc-b515cd70587e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "factory = GuardrailFactory()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d0d10a49-a558-4a5b-8f32-5a914b078558",
    "metadata": {},
    "outputs": [
@@ -78,7 +68,7 @@
     }
    ],
    "source": [
-    "factory.list_all_supported_guardrails()"
+    "GuardrailFactory.list_all_supported_guardrails()"
    ]
   },
   {
@@ -93,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2a7238fe-dfc9-4ee9-adc7-9cef0f5ccdc1",
    "metadata": {},
    "outputs": [
@@ -106,7 +96,7 @@
     }
    ],
    "source": [
-    "model = factory.create_guardrail(guardrail_identifier=\"protectai/deberta-v3-small-prompt-injection-v2\")"
+    "model = GuardrailFactory.create_guardrail(model_id=\"protectai/deberta-v3-small-prompt-injection-v2\")"
    ]
   },
   {
