refactor model management

--- a/examples/Testing.ipynb
+++ b/examples/Testing.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "model = GuardrailFactory.create_guardrail(model_id=\"protectai/deberta-v3-small-prompt-injection-v2\")"
+    "model = GuardrailFactory.create_guardrail(model_id=\"google/shieldgemma-2b\", guardrail_name=\"shield_gemma\")"
    ]
   },
   {
