--- a/examples/Testing.ipynb
+++ b/examples/Testing.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c9cf98ba-1f5f-4893-ab4d-7a76b6b17bf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from any_guardrail.api import GuardrailFactory"
+    "from any_guardrail.api import AnyGuardrail"
    ]
   },
   {
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "GuardrailFactory.list_all_supported_guardrails()"
+    "AnyGuardrail.list_all_supported_guardrails()"
    ]
   },
   {
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "model = GuardrailFactory.create_guardrail(model_id=\"protectai/deberta-v3-small-prompt-injection-v2\")"
+    "model = AnyGuardrail.create_guardrail(model_id=\"protectai/deberta-v3-small-prompt-injection-v2\")"
    ]
   },
   {
