Updating docs and samples
1. Updating contributing guide
2. Adding a new cookbook
3. Adding a new pre-commit hook to strip local Jupyter output

--- a/docs/cookbook/any_llm_as_a_guardrail.ipynb
+++ b/docs/cookbook/any_llm_as_a_guardrail.ipynb
@@ -46,18 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a2b07ef9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY found in environment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from getpass import getpass\n",
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5e61ecea",
    "metadata": {},
    "outputs": [],
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "535e040e",
    "metadata": {},
    "outputs": [],
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cd7d37ff",
    "metadata": {},
    "outputs": [],
@@ -124,42 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5956c08a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GuardrailOutput(valid=False, explanation='The user requested planning lunch options specifically for Monday, which is planning activities on Monday. The policy requires rejecting Monday planning requests.', score=0.92)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "guardrail.validate(\"Can you suggest me some restaurants for lunch on Monday?\", policy=POLICY, model_id=MODEL_ID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "218019a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GuardrailOutput(valid=True, explanation='The user asks for lunch restaurant suggestions on Friday. The policy forbids planning activities on Mondays, which does not apply here.', score=0.87)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "guardrail.validate(\"Can you suggest me some restaurants for lunch on Friday?\", policy=POLICY, model_id=MODEL_ID)"
    ]
@@ -167,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "any-guardrail",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
