--- a/docs/cookbook/any_llm_as_a_guardrail.ipynb
+++ b/docs/cookbook/any_llm_as_a_guardrail.ipynb
@@ -46,10 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a2b07ef9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY found in environment.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from getpass import getpass\n",
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e61ecea",
    "metadata": {},
    "outputs": [],
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "535e040e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cd7d37ff",
    "metadata": {},
    "outputs": [],
@@ -116,20 +124,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5956c08a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GuardrailOutput(valid=False, explanation='The user requested planning lunch options specifically for Monday, which is planning activities on Monday. The policy requires rejecting Monday planning requests.', score=0.92)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "guardrail.validate(\"Can you suggest me some restaurants for lunch on Monday?\", policy=POLICY, model_id=MODEL_ID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "218019a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GuardrailOutput(valid=True, explanation='The user asks for lunch restaurant suggestions on Friday. The policy forbids planning activities on Mondays, which does not apply here.', score=0.87)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "guardrail.validate(\"Can you suggest me some restaurants for lunch on Friday?\", policy=POLICY, model_id=MODEL_ID)"
    ]
@@ -137,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "any-guardrail",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
