--- a/docs/cookbook/azure_blocklist_slang_filter.ipynb
+++ b/docs/cookbook/azure_blocklist_slang_filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc73cdc4",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Custom Blocklists with Azure Content Safety\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea35c8db",
+   "id": "1",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -35,29 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6bbc1512",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "CONTENT_SAFETY_KEY not found in environment!\n",
-      "CONTENT_SAFETY_KEY set for this session!\n",
-      "CONTENT_SAFETY_ENDPOINT not found in environment!\n",
-      "CONTENT_SAFETY_ENDPOINT set for this session!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install gutenbergpy --quiet\n",
     "%pip install 'any-guardrail[azure-content-safety]' --quiet\n",
     "\n",
     "import os\n",
     "from getpass import getpass\n",
+    "\n",
     "\n",
     "def ensure_env_var(name: str) -> None:\n",
     "    \"\"\"Prompt for an environment variable if not already set.\"\"\"\n",
@@ -70,13 +58,13 @@
     "        print(f\"{name} found in environment.\")\n",
     "\n",
     "\n",
-    "for var in [ \"CONTENT_SAFETY_KEY\", \"CONTENT_SAFETY_ENDPOINT\"]:\n",
+    "for var in [\"CONTENT_SAFETY_KEY\", \"CONTENT_SAFETY_ENDPOINT\"]:\n",
     "    ensure_env_var(var)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "56b9fb72",
+   "id": "3",
    "metadata": {},
    "source": [
     "## Create a Blocklist\n",
@@ -86,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9ebe2e8c",
+   "execution_count": null,
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "w1k0lqwm1m",
+   "id": "5",
    "metadata": {},
    "source": [
     "##Add Terms to the Blocklist\n",
@@ -116,18 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3783ba6",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "blocklist_terms = [\"Skibidi\", \"Rizz\", \"Sigma\", \"Gyatt\", \"Brain Rot\",\"Fanum Tax\", \"Ohio\", \"Mewing\", \"Aura\", \"Sigma\", \"Crash Out\", \"Delulu\", \"Glaze\", \"Mog\", \"Pookie\", \"Opp\", \"Slay\"]\n",
-    "guardrail.add_blocklist_items(blocklist_name= blocklist_name, blocklist_terms=blocklist_terms)"
+    "blocklist_terms = [\n",
+    "    \"Skibidi\",\n",
+    "    \"Rizz\",\n",
+    "    \"Sigma\",\n",
+    "    \"Gyatt\",\n",
+    "    \"Brain Rot\",\n",
+    "    \"Fanum Tax\",\n",
+    "    \"Ohio\",\n",
+    "    \"Mewing\",\n",
+    "    \"Aura\",\n",
+    "    \"Sigma\",\n",
+    "    \"Crash Out\",\n",
+    "    \"Delulu\",\n",
+    "    \"Glaze\",\n",
+    "    \"Mog\",\n",
+    "    \"Pookie\",\n",
+    "    \"Opp\",\n",
+    "    \"Slay\",\n",
+    "]\n",
+    "guardrail.add_blocklist_items(blocklist_name=blocklist_name, blocklist_terms=blocklist_terms)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0bf89cd8",
+   "id": "7",
    "metadata": {},
    "source": [
     "## Validate Text\n",
@@ -138,27 +144,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "151cbdda",
+   "id": "8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Text: Hello, how are you?, \n",
-      "Evaluation result:valid=True explanation={'hate': 0, 'self_harm': 0, 'sexual': 0, 'violence': 0, 'blocklist': []} score=0 \n",
-      "Text: The startup pitch was all delulu with no solulu, \n",
-      "Evaluation result:valid=False explanation={'hate': 0, 'self_harm': 0, 'sexual': 0, 'violence': 0, 'blocklist': [{'blocklistName': 'GenAlphaSlang', 'blocklistItemId': '58d2efed-0d54-444c-8a2f-d1390d8c91dd', 'blocklistItemText': 'Delulu'}]} score=0 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Pass \n",
+    "# Pass\n",
     "text = \"Hello, how are you?\"\n",
     "result = guardrail.validate(text)\n",
     "print(f\"Text: {text} \\nEvaluation result:{result} \")\n",
     "\n",
-    "#Fail - contains a term from the block list\n",
+    "# Fail - contains a term from the block list\n",
     "text = \"The startup pitch was all delulu with no solulu\"\n",
     "result = guardrail.validate(text)\n",
     "print(f\"Text: {text} \\nEvaluation result:{result} \")"
@@ -166,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bks08fr8ne",
+   "id": "9",
    "metadata": {},
    "source": [
     "Below, test against a classic novel - *Anne of Green Gables* from Project Gutenberg. This demonstrates that literature from 1908 contains no Gen Alpha slang (as expected!)."
@@ -174,18 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "aac56a68",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: valid=True explanation={'hate': 0, 'self_harm': 0, 'sexual': 0, 'violence': 0, 'blocklist': []} score=0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gutenbergpy.textget\n",
     "\n",
@@ -194,7 +181,7 @@
     "raw_book = gutenbergpy.textget.get_text_by_id(45)\n",
     "# Strip headers and footers automatically\n",
     "clean_book = gutenbergpy.textget.strip_headers(raw_book)\n",
-    "chunks = [clean_book[i:i + 7000] for i in range(0, len(clean_book), 7000)]\n",
+    "chunks = [clean_book[i : i + 7000] for i in range(0, len(clean_book), 7000)]\n",
     "result = guardrail.validate(chunks[0])\n",
     "\n",
     "print(f\"Result: {result}\")"
@@ -202,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "qb9zekhjnbm",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Next Steps\n",
