--- a/docs/cookbook/any_llm_as_a_guardrail.ipynb
+++ b/docs/cookbook/any_llm_as_a_guardrail.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Using Any LLM as a Guardrail\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mozilla-ai/any-guardrail/blob/main/docs/cookbook/any_llm_as_a_guardrail.ipynb)\n",
+    "\n",
     "This tutorial will show you how to use any LLM as a baseline guardrail that can\n",
     "validate input text against a custom `policy`, using the built-in guardrail based on [`any-llm`](https://github.com/mozilla-ai/any-llm)."
    ]
@@ -137,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.8"
   }
  },
  "nbformat": 4,
