--- a/docs/cookbook/azure_blocklist_slang_filter.ipynb
+++ b/docs/cookbook/azure_blocklist_slang_filter.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Custom Blocklists with Azure Content Safety\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mozilla-ai/any-guardrail/blob/main/docs/cookbook/azure_blocklist_slang_filter.ipynb)\n",
+    "\n",
     "In this cookbook, we'll create a custom blocklist to block Gen Alpha slang from text content using Azure Content Safety and `any-guardrail`.\n",
     "\n",
     "## What You'll Learn\n",
